--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de usuário</title>
+    <title>Cadastro de usuário de ONG Amigão</title>
 </head>
 <body>
     <header>
-       <h1>Usuário</h1>
+       <h1>Usuário da ONG</h1>
        <nav>    
          <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -15,10 +15,32 @@
             <li><a href="cadastro.html">Cadastro</a></li>
          </ul>
        </nav>
-
-
-
-
     </header>  
+    <main>
+      <section>
+        <h2>Quem somos</h2>
+        <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
+        <img src="imagens/cachorro.jpg" alt="voluntários em ação">
+      </section>
+
+      <section>
+        <h2>Misssão da ONG Amigão</h2>
+        <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
+        
+        <section>
+          <h2>Contato com  ONG Amigão</h2>
+          <address>
+            <p>Endereço: Rua passagem Bingo, 123- Bairro Bela Vista -São Paulo/SP</p>
+            <p>Telefone: (11)99999-9999</p>
+            <p>Email: contato@organizaçãoongamigao.org.br</p>
+          </address>
+
+        </section>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 ONG Amigão</p>
+    </footer>
 </body>
 </html>
