--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       <section>
         <h2>Quem somos</h2>
         <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
-        <img src="imagens/cachorro.jpg" alt="voluntários em ação">
+        <img src="img/cachorro.png" width="150" height="150" alt="cachorro feliz">
       </section>
 
       <section>
         <h2>Misssão da ONG Amigão</h2>
         <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
+        <img src="img/brincando.jpg" alt="brincando" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
         
         <section>
           <h2>Contato com  ONG Amigão</h2>
