--- a/projeto.html
+++ b/projeto.html
@@ -4,27 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voluntariado e Doação de Animais</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-    }
-    
-    main {
-      padding: 20px;
-    }
-    section {
-      margin-bottom: 30px;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-  </style>
+ 
 </head>
 <body>
   <header>
@@ -49,9 +29,9 @@
 
     <section>
       <h2>Exemplo animais adotados</h2>
-      <img src="img/coelho.jpg" alt="coelho adotado" style="width=150px"; height="150px">
-      <img src="img/cachorro2.jpg" alt="cachorro adotado" style="width=150px; height=1500px">
-      <img src="img/gato.jpg" alt="gato adotado" style="width=150px; height=150px">
+      <img src="img/coelho.jpg" alt="coelho adotado" width="150" height="150">
+      <img src="img/cachorro2.jpg" alt="cachorro adotado" width="150" height="150">
+      <img src="img/gato.jpg" alt="gato adotado" width="150" height="150">
 
     </section>
   </main>
