--- a/cadastro.html
+++ b/cadastro.html
@@ -10,22 +10,34 @@
 
   <h1>Formulário de Adoção ou Doação</h1>
 
-  <form action="processa_formulario.php" method="post">
+  <form action="processa_formulario" method="post">
     <label for="nome">Nome completo:</label>
-    <input type="text" id="nome" name="nome" required>
+    <input type="text" id="nome" name="nome" required><br>
+
+    CPF:
+    <input type="text" id="cpf" name="cpf" required><br>
+  
 
     <label for="email">E-mail:</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" name="email" required><br>
 
     <label for="telefone">Telefone:</label>
-    <input type="tel" id="telefone" name="telefone" required>
+    <input type="tel" id="telefone" name="telefone" required><br>
+
+    <label for="data">Data Nascimento:</label>
+    <input type="text" id="data" name="data" required><br>
+
+    <label for="cidade">Cidade e Estado:</label>
+    <input type="text" id="cidade" name="cidade" required><br>
+
+
 
     <label for="tipo">Você deseja:</label>
     <select id="tipo" name="tipo" required>
       <option value="">Selecione</option>
       <option value="adotar">Adotar um animal</option>
       <option value="doar">Fazer uma doação</option>
-    </select>
+    </select> <br>
 
     <label for="animal">Se for adoção, qual tipo de animal?</label>
     <select id="animal" name="animal">
@@ -33,13 +45,14 @@
       <option value="cachorro">Cachorro</option>
       <option value="gato">Gato</option>
       <option value="outro">Outro</option>
-    </select>
+    </select><br>
 
     <label for="valor">Se for doação, qual valor deseja contribuir?</label>
-    <input type="number" id="valor" name="valor" min="1" step="0.01" placeholder="R$">
+    <input type="number" id="valor" name="valor" min="1" step="0.01" placeholder="R$"><br>
 
     <label for="mensagem">Mensagem ou observações:</label>
     <textarea id="mensagem" name="mensagem" rows="4" placeholder="Conte-nos sobre sua motivação ou dúvidas."></textarea>
+    <br>
 
     <button type="submit">Enviar</button>
   </form>
