--- a/index.html
+++ b/index.html
@@ -3,45 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de usuário de ONG Amigão</title>
+    <title>ONG Amigão - Início</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
-       <h1>Usuário da ONG</h1>
        <nav>    
-         <ul>
-            <li><a href="index.html">Inicio</a></li>
+         <div class="logo">&#128153; Voluntários</div>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+         <ul id="navMenu">
+            <li><a href="index.html" class="active">Inicio</a></li>
             <li><a href="projeto.html">Projeto</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
          </ul>
-       </nav>
-    </header>  
-    <main>
-      <section>
-        <h2>Quem somos</h2>
-        <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
-        <img src="img/cachorro.png" width="150" height="150" alt="cachorro feliz">
-      </section>
+        </nav>
+    </header>
 
-      <section>
-        <h2>Misssão da ONG Amigão</h2>
-        <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
-        <img src="img/brincando.jpg" alt="brincando" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
-        
-        <section>
+    <!-- Hero section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Bem-vindo à ONG Amigão</h1>
+            <p>Junte-se a nós para fazer a diferença na vida dos animais abandonados!</p>
+            <a href="cadastro.html" class="btn-primary">Cadastre-se como voluntário</a>
+        </div>
+    </section>
+
+    <section class="grid-index">
+        <div class="about">
+          <h2>Quem somos</h2>
+          <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
+          <ul></ul>
+          <img src="img/cachorro.png" width="150" height="150" alt="cachorro feliz">
+        </div>
+        <div class="mission">
+          <h2>Misssão da ONG Amigão</h2>
+          <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
+          <img src="img/brincando.jpg" alt="brincando" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
+        </div>
+        <div class="contact">
           <h2>Contato com  ONG Amigão</h2>
           <address>
             <p>Endereço: Rua passagem Bingo, 123- Bairro Bela Vista -São Paulo/SP</p>
             <p>Telefone: (11)99999-9999</p>
             <p>Email: contato@organizaçãoongamigao.org.br</p>
           </address>
-
-        </section>
-      </section>
-    </main>
-
+        </div>
+    </section>
     <footer>
       <p>&copy; 2025 ONG Amigão</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
